// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataPoint matches snapshot with icon 1`] = `
<div
  class="flex flex-wrap items-center gap-1 mb-2"
>
  <div
    class="flex w-full items-center gap-2"
  >
    <div
      class="text-gray-500"
    >
      <span>
        📊
      </span>
    </div>
    <dt
      class="text-sm font-medium uppercase text-gray-500"
    >
      Population
    </dt>
  </div>
  <dd
    class="text-sm text-gray-900"
  >
    331,000,000
  </dd>
</div>
`;

exports[`DataPoint matches snapshot without icon 1`] = `
<div
  class="flex flex-wrap items-center gap-1 mb-2"
>
  <div
    class="flex w-full items-center gap-2"
  >
    <dt
      class="text-sm font-medium uppercase text-gray-500"
    >
      GDP
    </dt>
  </div>
  <dd
    class="text-sm text-gray-900"
  >
    $25.5 trillion
  </dd>
</div>
`;
